--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,30 +64,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_cqm():\n",
     "\n",
-    "    # Define the decision variables: Using a dictionary comprehension where each variable is a binary variable corresponding to the assignment of a facility to a location.\n",
+    "    # Define the decision variables: \n",
     "    x = {(i, j): Binary(f'F{i}_L{j}') for i in range(n) for j in range(n)}\n",
     "\n",
     "    # Instantiate the Constrained Quadratic Model\n",
     "    cqm = ConstrainedQuadraticModel()\n",
     "\n",
-    "    # Define the objective function: The cost is computed as the product of the flow between the facilities and the distance between the locations, multiplied by the binary variables corresponding to the assignment of each facility to each location\n",
-    "    objective =(offset) * quicksum(f[i][j] * d[p][q] * x[(i, p)] * x[(j, q)] for i in range(n) for j in range(n) for p in range(n) for q in range(n))\n",
+    "    # Define the objective function: \n",
+    "    objective = (offset) * quicksum(f[i][j] * d[p][q] * x[(i, p)] * x[(j, q)] for i in range(n) for j in range(n) \n",
+    "                                    for p in range(n) for q in range(n))\n",
     "\n",
     "    cqm.set_objective(objective)\n",
     "\n",
-    "    # Define the constraints to ensure that each facility is assigned to exactly one location\n",
+    "    # Define the constraints: each facility is assigned to exactly one location\n",
     "    for i in range(n):\n",
     "        cqm.add_constraint(\n",
     "        quicksum(x[(i, j)] for j in range(n)) == 1\n",
     "        )\n",
     "\n",
-    "    # Define the constraints to ensure that each location is assigned to exactly one facility\n",
+    "    # Define the constraints: each location is assigned to exactly one facility\n",
     "    for j in range(n):\n",
     "        cqm.add_constraint(\n",
     "        quicksum(x[(i, j)] for i in range(n)) == 1\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Facility_sequence according to the order of location[0-indexed]: [2, 0, 8, 7, 6, 3, 4, 5, 1]\n"
+      "Facility_sequence according to the order of location[0-indexed]: [2, 3, 0, 1]\n"
      ]
     }
    ],
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
