--- a/main.ipynb
+++ b/main.ipynb
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Let's compare the case for n=9"
+    "### Let's compare the case for n=9"
    ]
   },
   {
